--- a/Website/genstyle.css
+++ b/Website/genstyle.css
@@ -1,12 +1,64 @@
 
+/* Add this CSS to your "genstyle.css" file */
+
+/* Style the header and navigation */
+#header {
+    background-color: #7E6BF1; /* Purple background color */
+    padding: 10px 0;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    font-family: 'Open Sans', Arial, sans-serif;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.title {
+    font-size: 24px;
+
+    color: #fff; /* White text color */
+    text-decoration: none;
+}
+
+.navbar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.navbar a {
+    color: #3498db; /* Blue text color */
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.navbar a.active {
+    color: #fff; /* White text color for the active link */
+}
+
 body {
     background-color: #7E6BF1; /* Purple background color */
-    font-family: Arial, sans-serif;
+    font-family: "Courier New", monospace;
+    font-weight: bold;
+
 }
 
 h1 {
     text-align: center;
-    font-size: 24px;
+    font-size: 56px;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-weight: bold;
     color: #d0dfe9; /* Blue text color */
 }
 
@@ -16,8 +68,9 @@ form {
 }
 
 p {
-    font-size: 18px;
+    font-size: 36px;
     color: #e9eff2; /* Blue text color */
+    font-family: 'Open Sans', Arial, sans-serif;
 }
 
 input[type="text"] {
@@ -27,6 +80,7 @@ input[type="text"] {
     border: 1px solid #3498db; /* Blue border */
     background-color: #fff; /* White background */
     color: #333; /* Text color */
+    font-family: "Courier New", monospace;
 }
 
 input[type="submit"] {
@@ -35,12 +89,14 @@ input[type="submit"] {
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+    font-family: "Courier New", monospace;
 }
 
 #result {
     text-align: center;
     font-weight: bold;
     margin: 20px;
+    font-family: "Courier New", monospace;
     color: #3498db; /* Blue text color */
 }
 
