--- a/Website/genstyle.css
+++ b/Website/genstyle.css
@@ -2,12 +2,8 @@
 /* Add this CSS to your "genstyle.css" file */
 
 /* Style the header and navigation */
-#header {
-    background-color: #7E6BF1; /* Purple background color */
-    padding: 10px 0;
-    text-align: center;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    font-family: 'Open Sans', Arial, sans-serif;
+.header {
+    align-items: center;
 }
 
 .navbar {
@@ -19,36 +15,16 @@
 }
 
 .title {
-    font-size: 24px;
-
+    font-size: 50px;
+    align-items: center;
     color: #fff; /* White text color */
     text-decoration: none;
 }
 
-.navbar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 
-.navbar li {
-    display: inline;
-    margin-right: 20px;
-}
-
-.navbar a {
-    color: #3498db; /* Blue text color */
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.navbar a.active {
-    color: #fff; /* White text color for the active link */
-}
  
 body {
-    background-color: #7E6BF1; /* Purple background color */
+    background-color: #afa5e7ae; /* Purple background color */
     font-family: "Courier New", monospace;
     font-weight: bold;
 
@@ -59,7 +35,7 @@ h1 {
     font-size: 56px;
     font-family: 'Open Sans', Arial, sans-serif;
     font-weight: bold;
-    color: #d0dfe9; /* Blue text color */
+    color: #321ea4; /* Blue text color */
 }
 
 form {
@@ -74,13 +50,13 @@ p {
 }
 
 input[type="text"] {
-    width: 100%;
+    width: 25%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #3498db; /* Blue border */
     background-color: #fff; /* White background */
     color: #333; /* Text color */
-    font-family: "Courier New", monospace;
+    font-family: 'Open Sans', Arial, sans-serif, monospace;
 }
 
 input[type="submit"] {
@@ -89,14 +65,14 @@ input[type="submit"] {
     border: none;
     padding: 10px 20px;
     cursor: pointer;
-    font-family: "Courier New", monospace;
+    font-family: 'Open Sans', Arial, sans-serif, monospace;
 }
 
 #result {
     text-align: center;
     font-weight: bold;
     margin: 20px;
-    font-family: "Courier New", monospace;
-    color: #3498db; /* Blue text color */
+    font-family: "Open Sans", Arial, sans-serif, monospace;
+    color: #efe175; /* Blue text color */
 }
 
