--- a/Website/genstyle.css
+++ b/Website/genstyle.css
@@ -25,7 +25,7 @@
  
 body {
     background-color: #afa5e7ae; /* Purple background color */
-    font-family: "Courier New", monospace;
+    font-family: 'Font Awesome 5 Free';
     font-weight: bold;
 
 }
@@ -33,7 +33,7 @@ body {
 h1 {
     text-align: center;
     font-size: 56px;
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: 'Font Awesome 5 Free';
     font-weight: bold;
     color: #321ea4; /* Blue text color */
 }
@@ -45,8 +45,8 @@ form {
 
 p {
     font-size: 36px;
-    color: #e9eff2; /* Blue text color */
-    font-family: 'Open Sans', Arial, sans-serif;
+    color: #ffffff; /* Blue text color */
+    font-family: 'Font Awesome 5 Free';
 }
 
 input[type="text"] {
@@ -56,7 +56,7 @@ input[type="text"] {
     border: 1px solid #3498db; /* Blue border */
     background-color: #fff; /* White background */
     color: #333; /* Text color */
-    font-family: 'Open Sans', Arial, sans-serif, monospace;
+    font-family: 'Font Awesome 5 Free';
 }
 
 input[type="submit"] {
@@ -71,8 +71,8 @@ input[type="submit"] {
 #result {
     text-align: center;
     font-weight: bold;
-    margin: 20px;
-    font-family: "Open Sans", Arial, sans-serif, monospace;
-    color: #efe175; /* Blue text color */
+    margin: 15px;
+    font-family: 'Font Awesome 5 Free';
+    color: #ffea4a; /* Blue text color */
 }
 
