--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -291,6 +291,37 @@
                     color: inherit;
                     text-decoration: none;
                 }
+				.button-container {
+					display: flex;
+					justify-content: space-between;
+					padding: 10px;
+				}
+			
+				.number-button {
+					background-color: #261c3e;
+					color: #fff;
+					border: none;
+					border-radius: 4px;
+					padding: 10px 20px;
+					cursor: pointer;
+					text-align: center; /* Center the text horizontally */
+					vertical-align: middle; /* Center the text vertically */
+					line-height: 1; /* Reset line height to avoid extra vertical spacing */
+				}
+			
+				.number-button:hover {
+					background-color: #463470;
+				}
+				.mood-box{
+					justify-content: center;
+					display: flex;
+				}
+				.mood-box-header{
+					font-size: 30px;
+					color: white;
+					margin-bottom: 10px;
+
+				}
                 
                 h1 {
                     font-size: 2.75em;
