--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -2384,11 +2384,15 @@
                 .image img {
                     border-radius: 0.25em;
                     display: block;
+					border-top-left-radius: 100px;
+  					border-bottom-right-radius: 10px;
                 }
                 
                 .image.left,
                 .image.right {
                     max-width: 40%;
+					border-top-left-radius: 100px;
+  					border-bottom-right-radius: 10px;
                 }
                 
                 .image.left img,
@@ -2400,6 +2404,7 @@
                     float: left;
                     margin: 0 1.5em 1em 0;
                     top: 0.25em;
+  
                 }
                 
                 .image.right {
