--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -276,7 +276,7 @@
                 h4,
                 h5,
                 h6 {
-                    color: #ffffff;
+                    color: #f9f8f8;
                     font-weight: bold;
                     line-height: 1.5;
                     margin: 0 0 0.5em 0;
