--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -2441,15 +2441,15 @@
                 .image img {
                     border-radius: 0.25em;
                     display: block;
-					border-top-left-radius: 100px;
-  					border-bottom-right-radius: 10px;
+                    border-top-left-radius: 100px;
+                    border-bottom-right-radius: 10px;
                 }
                 
                 .image.left,
                 .image.right {
                     max-width: 40%;
-					border-top-left-radius: 100px;
-  					border-bottom-right-radius: 10px;
+                    border-top-left-radius: 100px;
+                    border-bottom-right-radius: 10px;
                 }
                 
                 .image.left img,
@@ -2461,7 +2461,6 @@
                     float: left;
                     margin: 0 1.5em 1em 0;
                     top: 0.25em;
-  
                 }
                 
                 .image.right {
@@ -3714,4 +3713,26 @@
                     #intro {
                         background-attachment: scroll;
                     }
+                }
+                
+                .journal-container {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin-top: 20px;
+                }
+                
+                #journal-entry {
+                    width: 300px;
+                    height: 200px;
+                    padding: 10px;
+                    margin-bottom: 10px;
+                }
+                
+                #save-button {
+                    padding: 10px 20px;
+                    background-color: #4CAF50;
+                    color: white;
+                    border: none;
+                    cursor: pointer;
                 }
