--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -303,6 +303,7 @@
                 
                 .button-container {
                     display: flex;
+					flex-wrap: wrap;
                     justify-content: space-between;
                     padding: 10px;
                 }
