--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -3735,5 +3735,6 @@
                     color: white;
                     border: none;
                     cursor: pointer;
+					line-height: 1;
 					font-size: 10px;
                 }
